[UPDATE] pe_revatua : Ajouts des liens de téléchargement

--- a/pe_revatua/views/sale_order.xml
+++ b/pe_revatua/views/sale_order.xml
@@ -30,6 +30,12 @@
                     <field name="is_deliver" widget="boolean_toggle" attrs="{'readonly': [('state', 'not in', ('sale','done'))], 'invisible': [('revatua_ck', '=', False)]}"/>
                 </xpath>
 
+                
+                <!-- Champs : BL -->
+                <xpath expr="//field[@name='payment_term_id']" position="after">
+                    <field name="attachment_ids" widget="many2many_binary"/>
+                </xpath>
+
                 <!-- Champs : Informations Expéditeur/Destinataire -->
                 <xpath expr="//group[@name='sale_header']" position="after">
                     <group name="detail_livraison" attrs="{'invisible': [('revatua_ck', '=', False)]}">
@@ -148,6 +154,14 @@
                             </tbody>
                         </table>
                     </div>
+                    <group>
+                        <!-- Champs : BL -->
+                        <group>
+                            <div>
+                                <field name="pe_attachment_ids" nolable="1" widget="many2many_binary"/>
+                            </div>
+                        </group>
+                    </group>
                 </xpath>
                 
             </field></record>
