--- a/pe_revatua/report/sale_order_portal.xml
+++ b/pe_revatua/report/sale_order_portal.xml
@@ -4,8 +4,8 @@
         <template id="pe_revatua_sale_order_portal" inherit_id="sale.sale_order_portal_template">
            <xpath expr="//div[@id='portal_sale_content']" position="replace">
                <div t-attf-class="card #{'pb-5' if report_type == 'html' else ''}" id="portal_sale_content">
-                    <div t-if="not sale_order.revatua_ck" t-call="sale.sale_order_portal_content"/>
-                    <div t-else="" class="mt8 mb8" style="margin:25px;" width="100%" height="100%" frameborder="0" scrolling="no" t-call="pe_revatua.pe_revatua_sale_order_portal_template"/>
+                    <div id="tls_sale_template" t-if="not sale_order.revatua_ck" t-call="sale.sale_order_portal_content"/>
+                    <div if="at_sale_template" t-else="" class="mt8 mb8" style="margin:25px;" width="100%" height="100%" frameborder="0" scrolling="no" t-call="pe_revatua.pe_revatua_sale_order_portal_template"/>
                 </div>
            </xpath>
         </template>
