--- a/pe_custom/views/res_partner.xml
+++ b/pe_custom/views/res_partner.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo><data>
     
-    <record id="pe_revatua_res_partner_inherit_form" model="ir.ui.view">
-        <field name="name">Pacific-ERP res.partner : pe_revatua (form)</field>
+    <record id="pe_custom_res_partner_form" model="ir.ui.view">
+        <field name="name">Pacific-ERP res.partner : pe_custom (form)</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='function']" position="before">
-                <field name="id_adm" widget="boolean_toggle"/>
-            </xpath>
             <!-- Required -->
             <xpath expr="//field[@name='phone']" position="attributes">
                 <attribute name="required">1</attribute>
